restructured the global exception handling